# claudetest2

./: .clippy.toml  .editorconfig  .gitignore  BEVY_MIGRATION_PLAN.md  CARTOON_ISOMETRIC_PHASE1_REVIEW.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PHASE_1_CARTOON_ISOMETRIC_REVIEW.md  PHASE_1_IMPLEMENTATION_STATUS.md  PHASE_1_REVIEW.md  PHASE_2_CARTOON_ISOMETRIC_SUMMARY.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_TEST_COVERAGE_REPORT.md  PHASE_4_ASSETS_TODO.md  PHASE_4_COMPLETE_SUMMARY.md  PHASE_4_EGUI_FIX.md  PHASE_4_FINAL_STATUS.md  PHASE_4_FIXES.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  PHASE_4_REVIEW_SUMMARY.md  README.md  TEST_COVERAGE_REPORT.md  WEEK_5_6_IMPLEMENTATION_SUMMARY.md  rustfmt.toml
.github/workflows/: performance-regression.yml
assets/fonts/: README.md
assets/shaders/: pattern_shader.wgsl
assets/sprites/: README.md
benches/: creature_benchmark.rs  decision_performance.rs  spatial_performance.rs  versioning_performance.rs
docs/: ALL_DOCUMENTATION.md  DEBUGGING_GUIDE.md  DESIGN_COMPLETION_SUMMARY.md  DEVELOPER_CHEAT_SHEET.md  EGUI_INTEGRATION.md  FINAL_SETUP_SUMMARY.md  IMPLEMENTATION_READY_SUMMARY.md  INDEX.md  KEYWORD_INDEX.md  PHASE_1_COMPLETION.md  PHASE_1_IMPLEMENTATION_GUIDE.md  PRESENTATION_LAYER_SETUP.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  START_HERE.md  SUMMARY_AND_NEXT_STEPS.md  TDD_EXAMPLE.md  TESTING_STRATEGY.md
docs/design/: ASSET_PIPELINE.md  BEST_PRACTICES_SUMMARY.md  BIOME_RESOURCE_BALANCE.md  CODE_STYLE_GUIDE.md  COMBAT_SYSTEM.md  (+42 more)
examples/: benchmark_500_creatures.rs  bevy_simulation.rs  full_simulation.rs  headless_simulation.rs  performance_benchmark_500.rs  phase1_demo_simple.rs  phase4_demo.rs  phase4_simple.rs  phase4_test.rs  quick_benchmark.rs  test_ui.rs
saves/: autosave.json
scripts/: create_placeholder_assets.sh  create_ui_assets.sh  generate_placeholder_sprites.py  generate_ui_assets.py  pre-commit.sh
src/: config.rs  lib.rs  main.rs  prelude.rs
tests/: bevy_integration_tests.rs  debug_consumption.rs  debug_test.rs  integration_tests.rs  load_tests.rs  mod.rs  performance_regression_tests.rs  phase1_coverage_test.rs  phase1_integration.rs  phase2_cartoon_isometric_tests.rs  phase2_cartoon_tests.rs  phase3_tests.rs  phase4_audio_tests.rs  phase4_camera_tests.rs  phase4_integration_tests.rs  property_tests.rs  resource_spawning_debug_test.rs  resource_spawning_test.rs  simple_decision_test.rs  simple_eat_test.rs
(+143 files in other folders)
