[package]
name = "creature_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
# Math and geometry
glam = "0.24"

# Collections and data structures
ahash = "0.8"
indexmap = "2.0"

# Time handling
instant = "0.1"

# Random number generation with deterministic seeding
rand = "0.8"
rand_xorshift = "0.3"

# Serialization (for future save/load)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Signal handling
ctrlc = "3.4"

[dev-dependencies]
# Testing utilities
criterion = "0.5"
proptest = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "creature_benchmark"
harness = false