[package]
name = "creature_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
# Game engine
bevy = { version = "0.13", features = ["dynamic_linking"] }

# UI framework
bevy_egui = "0.26"

# Math and geometry (using bevy's re-export instead)
# glam = "0.24"

# Collections and data structures
ahash = "0.8"
indexmap = "2.0"
dashmap = "5.5"  # For thread-safe maps

# Time handling
instant = "0.1"

# Random number generation with deterministic seeding
rand = "0.8"
rand_xorshift = "0.3"

# Serialization (for future save/load)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # For binary serialization

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Signal handling
ctrlc = "3.4"

# Performance monitoring
hdrhistogram = "7.5"

# Compression for save files
zstd = "0.13"

# Parallel processing
rayon = "1.8"

# Synchronization primitives
parking_lot = "0.12"

# Configuration
toml = "0.8"
config = { version = "0.13", features = ["toml"] }
notify = "6.1"  # For config hot-reloading

[dev-dependencies]
# Testing utilities
criterion = "0.5"
proptest = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies in debug mode

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Profile for performance testing
[profile.bench]
inherits = "release"
debug = true  # Keep debug symbols for profiling

[[bench]]
name = "creature_benchmark"
harness = false